@@ -1,3 +1,7 @@
+15/03/2011 Changes
+
+Parsing sequences within a block.
+
 
 13/03/2011 Changes
 
